style: fix gap

--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -48,7 +48,7 @@ body {
   flex-direction: row;
   padding: 3rem 4rem;
   display: flex;
-  gap: 1rem;
+  gap: 1.5rem;
   align-items: center;
 }
 
